# splicer

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  demo-plan.md  rust-toolchain.toml  wkg-registries.toml
.github/workflows/: ci.yml  publish-builtin.yml  publish-wit.yml  publish.yml  release.yml
assets/builtins/: hello-tier1.wasm  otel-bare-logs.wasm  otel-bare-metrics.wasm  otel-bare-spans.wasm  otel-logs.wasm  otel-metrics.wasm
builtins/: wasi_snapshot_preview1.reactor.wasm
builtins/hello-tier1/: Cargo.toml  wkg.toml
builtins/hello-tier1/src/: lib.rs
builtins/hello-tier1/wit/: world.wit
builtins/otel-bare-logs/: Cargo.toml  wkg.toml
builtins/otel-bare-logs/src/: lib.rs
builtins/otel-bare-logs/wit/: world.wit
builtins/otel-bare-metrics/: Cargo.toml
builtins/otel-bare-metrics/src/: lib.rs
builtins/otel-bare-metrics/wit/: world.wit
builtins/otel-bare-spans/: Cargo.toml
builtins/otel-bare-spans/src/: lib.rs
builtins/otel-bare-spans/wit/: world.wit
builtins/otel-logs/: .gitignore  Cargo.toml
builtins/otel-logs/src/: lib.rs
builtins/otel-logs/wit/: world.wit
builtins/otel-metrics/: Cargo.toml
builtins/otel-metrics/src/: lib.rs
builtins/otel-metrics/wit/: world.wit
demo/wat/: 03a-log-chain.wat  03b-middleware-compatible.wat  03c-middleware-incompatible.wat  log-middleware-compatible.wat  log-middleware-incompatible.wat
demo/yaml/: before-noprov.yaml  builtin.yaml
docs/: README.md  adapter-comp-planning.md  adapter-components.md  adapter-internals.md  blog0.md  ideas.md  proxy-comp-planning.md  splice-config.md  todo.md
docs/TODO/: adapter-comp-planning.md  builtin-config-substrate.md  test-with-real-compositions.md
docs/tiers/: lift-codegen.md  tier-1.md  tier-2.md  tier-3.md  tier-4.md
examples/: before-long.yaml  before-nomatch.yaml  before-noprov.yaml  before.yaml  demo.rs  long-chain.json  multi_rule.yaml  service-b.json  short-chain.json  splice-long.yaml  splice-nomatch.yaml  splice.yaml  wac_compose.rs  wit_component_spike.rs
src/: adapter.rs  api.rs  builtins.rs  compose.rs  contract.rs  lib.rs  main.rs  model.rs  proxy.rs  split.rs  tests.rs  wac.rs
src/adapter/: bindgen.rs  bindgen_compat.rs  component.rs  dispatch.rs  emit.rs  encoders.rs  func.rs  indices.rs  mem_layout.rs  mod.rs  names.rs  resolve.rs  shared.rs  split_imports.rs  tests.rs  ty.rs  wit_bridge.rs
src/adapter/abi/: bindgen.rs  bridge.rs  canon_async.rs  compat.rs  emit.rs  mod.rs
src/adapter/filter/: mod.rs  raw_sections_reencoder.rs  section_filter.rs  test_helpers.rs
src/adapter/tests/: fuzz.rs  runtime.rs
src/adapter/tier1/: emit.rs  mod.rs  tests.rs
src/adapter/tier1/tests/: fuzz.rs
src/adapter/tier2/: blob.rs  cells.rs  emit.rs  layout.rs  lift.rs  mod.rs  schema.rs  section_emit.rs  test_utils.rs  wrapper_body.rs
src/adapter/tier2/lift/: classify.rs  emit.rs  mod.rs  plan.rs  tests.rs
src/adapter/tier2/lift/sidetable/: char_info.rs  enum_info.rs  flags_info.rs  handle_info.rs  mod.rs  record_info.rs  tuple_indices.rs  variant_info.rs
src/parse/: config.rs  json.rs  mod.rs
tests/: builtins_otel_bare_logs.rs  builtins_otel_bare_metrics.rs  builtins_otel_bare_spans.rs  builtins_otel_logs.rs  builtins_otel_metrics.rs  cli.rs  fuzz_and_run.rs  integration.rs  runtime_pipeline.rs
tests/common/: mod.rs
wit/common/: world.wit
wit/tier1/: world.wit
wit/tier2/: world.wit
