[package]
name = "splicer"
version = "2.0.0"
edition = "2021"
authors = ["Elizabeth Gilbert"]
description = "Plan and generate middleware splice operations for WebAssembly component composition graphs."
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/ejrgilbert/splicer"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "components", "composition"]

[[bin]]
doc = false
name = "splicer"
path = "src/main.rs"

[lib]
name = "splicer"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "wac_compose"
path = "examples/wac_compose.rs"

[dependencies]
colored = "3.1.1"
cviz = "2.0.0"
#cviz = { path = "../cviz" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.86"
semver = "1"
clap = { version = "4.5.58", features = ["derive"] }
wasmparser = "0.247.0"
wasm-encoder = { version = "0.247.0", features = ["wasmparser"] }
wit-parser = "0.247"
wit-bindgen-core = "0.57.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wirm = "4.0.1"
#wirm = { path = "../../research/compilers/wirm" }

[dev-dependencies]
wat = "1"
tempfile = "3"
arbitrary = "1"
wasmtime = { version = "41", features = ["component-model", "component-model-async", "async"] }
wasmtime-wasi = "41"
tokio = { version = "1", features = ["rt", "macros"] }
wac-parser = "0.9"
wac-resolver = "0.9"
wac-graph = "0.9"
