[package]
name = "splicer"
version = "2.0.3"
edition = "2021"
authors = ["Elizabeth Gilbert"]
description = "Plan and generate middleware splice operations for WebAssembly component composition graphs."
license = "Apache-2.0"

readme = "README.md"
repository = "https://github.com/ejrgilbert/splicer"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "components", "composition"]

[[bin]]
doc = false
name = "splicer"
path = "src/main.rs"

[lib]
name = "splicer"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "wac_compose"
path = "examples/wac_compose.rs"

[[example]]
name = "wit_component_spike"
path = "examples/wit_component_spike.rs"
required-features = []

[dependencies]
colored = "3.1.1"
cviz = "2.0.2"
#cviz = { path = "../cviz" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0.86"
semver = "1"
clap = { version = "4.5.58", features = ["derive"] }
wasmparser = "0.247.0"
wasm-encoder = { version = "0.247.0", features = ["wasmparser"] }
wit-parser = "0.247"
wit-bindgen-core = "0.57.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wirm = "4.0.3"
#wirm = { path = "../../research/compilers/wirm" }
# Used by the new WIT-level adapter generator (src/adapter/build/wit_component_emit.rs).
# Replaces ~all of the manual component-emit logic in src/adapter/build/component.rs.
wit-component = "0.247"

[dev-dependencies]
wat = "1"
tempfile = "3"
arbitrary = "1"
wasmtime = { version = "44", features = ["component-model", "component-model-async", "async"] }
wasmtime-wasi = "44"
tokio = { version = "1", features = ["rt", "macros"] }
wac-parser = "0.10"
wac-resolver = "0.10"
wac-graph = "0.10"
# Spike-only: enables the `dummy-module` feature for
# `examples/wit_component_spike.rs`. The base `wit-component` crate is
# pulled in via `[dependencies]` above; here we just turn on the extra
# feature the spike needs. Drop this entire entry once the spike is gone.
wit-component = { version = "0.247", features = ["dummy-module"] }

# wirm 4.0.4 (with the bare-func-types resource map fix from
# composablesys/wirm#335) hasn't been published yet. Override the
# crates.io entry — including cviz's transitive dep — to the local
# checkout so the fix takes effect everywhere splicer pulls wirm in.
# Revert to a registry version once wirm releases.
[patch.crates-io]
wirm = { path = "../../research/compilers/wirm" }
